<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#833288"
    android:orientation="vertical"
    tools:context=".Detalle">

    <ImageView
        android:id="@+id/imagen_img"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/nombre_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="0dp"
        android:fontFamily="@font/autour_one"
        android:gravity="center_horizontal|center_vertical"
        android:justificationMode="none"
        android:text="@string/nombreEjemplo_txt"
        android:textColor="#e9ad00"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/descripcion_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/autour_one"
        android:gravity="start|center_vertical"
        android:justificationMode="none"
        android:text="@string/descripcionEjemplo_txt"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/precio_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:fontFamily="@font/autour_one"
        android:gravity="start|center_vertical"
        android:justificationMode="none"
        android:text="@string/precio_txt"
        android:textColor="#e9ad00"
        android:textSize="24sp"
        android:textStyle="bold" />
</LinearLayout>